// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination component renders 1`] = `
@media  {
  :root,
  .t-cyussq {
    --default-colors: [object Object];
    --default-space: [object Object];
    --default-fontSizes: [object Object];
    --default-fonts: [object Object];
    --default-sizes: [object Object];
    --default-radii: [object Object];
    --default-shadows: [object Object];
    --colors-textForeground: hsl(0, 0%, 12%);
    --colors-textSubtle: hsl(0, 0%, 33%);
    --colors-textPlaceholder: hsl(0, 0%, 46%);
    --colors-background: hsl(0, 0%, 96%);
    --colors-backgroundAccent: hsl(215, 100%, 98%);
    --colors-grey100: hsl(0, 0%, 96%);
    --colors-grey200: hsl(0, 0%, 92%);
    --colors-grey300: hsl(0, 0%, 88%);
    --colors-grey400: hsl(0, 0%, 81%);
    --colors-grey500: hsl(0, 0%, 76%);
    --colors-grey600: hsl(0, 0%, 71%);
    --colors-grey700: hsl(0, 0%, 46%);
    --colors-grey800: hsl(0, 0%, 33%);
    --colors-grey900: hsl(0, 0%, 20%);
    --colors-grey1000: hsl(0, 0%, 12%);
    --colors-grey1100: hsl(0, 0%, 10%);
    --colors-grey1200: hsl(0, 0%, 6%);
    --colors-blue100: hsl(215, 100%, 98%);
    --colors-blue200: hsl(212, 100%, 95%);
    --colors-blue300: hsl(211, 100%, 92%);
    --colors-blue400: hsl(212, 100%, 88%);
    --colors-blue500: hsl(212, 87%, 84%);
    --colors-blue600: hsl(216, 96%, 79%);
    --colors-blue700: hsl(214, 92%, 63%);
    --colors-blue800: hsl(217, 92%, 51%);
    --colors-blue900: hsl(223, 78%, 44%);
    --colors-blue1000: hsl(228, 82%, 35%);
    --colors-blue1100: hsl(228, 63%, 23%);
    --colors-blue1200: hsl(228, 63%, 20%);
    --colors-purple100: hsl(281, 100%, 98%);
    --colors-purple200: hsl(270, 100%, 95%);
    --colors-purple300: hsl(270, 100%, 92%);
    --colors-purple400: hsl(270, 100%, 89%);
    --colors-purple500: hsl(270, 87%, 84%);
    --colors-purple600: hsl(264, 96%, 79%);
    --colors-purple700: hsl(275, 100%, 51%);
    --colors-purple800: hsl(273, 94%, 48%);
    --colors-purple900: hsl(268, 78%, 42%);
    --colors-purple1000: hsl(266, 82%, 32%);
    --colors-purple1100: hsl(265, 63%, 23%);
    --colors-purple1200: hsl(265, 63%, 20%);
    --colors-tonal50: hsl(0, 0%, 96%);
    --colors-tonal100: hsl(0, 0%, 92%);
    --colors-tonal200: hsl(0, 0%, 71%);
    --colors-tonal300: hsl(0, 0%, 46%);
    --colors-tonal400: hsl(0, 0%, 33%);
    --colors-tonal500: hsl(0, 0%, 20%);
    --colors-tonal600: hsl(0, 0%, 12%);
    --colors-alpha100: hsla(0, 0%, 20%, 0.1);
    --colors-alpha150: hsla(0, 0%, 20%, 0.15);
    --colors-alpha200: hsla(0, 0%, 20%, 0.2);
    --colors-alpha250: hsla(0, 0%, 20%, 0.25);
    --colors-alpha600: hsla(0, 0%, 20%, 0.6);
    --colors-primaryLight: hsl(215, 100%, 98%);
    --colors-primary: hsl(217, 92%, 51%);
    --colors-primaryMid: hsl(223, 78%, 44%);
    --colors-primaryDark: hsl(228, 82%, 35%);
    --colors-secondary: hsl(204, 100%, 72%);
    --colors-brandRed: hsl(0, 91%, 64%);
    --colors-brandRedAccent: hsl(14, 100%, 71%);
    --colors-brandGreen: hsl(128, 47%, 53%);
    --colors-brandGreenAccent: hsl(168, 100%, 20%);
    --colors-brandPurple: hsl(256, 65%, 62%);
    --colors-brandPurpleAccent: hsl(256, 93%, 35%);
    --colors-brandYellow: hsl(41, 100%, 55%);
    --colors-brandYellowAccent: hsl(33, 100%, 50%);
    --colors-successLight: hsl(119, 44%, 94%);
    --colors-success: hsl(119, 100%, 27%);
    --colors-successMid: hsl(124, 100%, 22%);
    --colors-successDark: hsl(126, 100%, 17%);
    --colors-dangerLight: hsl(0, 77%, 95%);
    --colors-danger: hsl(0, 96%, 48%);
    --colors-dangerMid: hsl(0, 96%, 41%);
    --colors-dangerDark: hsl(0, 97%, 34%);
    --colors-warningLight: hsl(39, 100%, 94%);
    --colors-warning: hsl(41, 100%, 55%);
    --colors-warningMid: hsl(41, 89%, 48%);
    --colors-warningDark: hsl(41, 100%, 41%);
    --colors-warningText: hsl(24, 100%, 37%);
    --colors-subjectEnglish: hsl(0, 91%, 64%);
    --colors-subjectMaths: hsl(217, 92%, 51%);
    --colors-subjectScience: hsl(256, 65%, 62%);
    --colors-subjectVerbalReasoning: hsl(128, 47%, 53%);
    --colors-subjectNonVerbalReasoning: hsl(41, 100%, 55%);
    --colors-subjectCreativeWriting: hsl(33, 100%, 50%);
    --colors-subjectExamSkills: hsl(256, 93%, 35%);
    --space-0: 0.125rem;
    --space-1: 0.25rem;
    --space-2: 0.5rem;
    --space-3: 0.75rem;
    --space-4: 1rem;
    --space-5: 2rem;
    --space-6: 2.5rem;
    --space-7: 3rem;
    --space-8: 4rem;
    --space-9: 5rem;
    --space-24: 1.5rem;
    --fontSizes-xs: 0.75rem;
    --fontSizes-sm: 0.875rem;
    --fontSizes-md: 1rem;
    --fontSizes-lg: 1.3125rem;
    --fontSizes-xl: 1.75rem;
    --fontSizes-2xl: 2.3125rem;
    --fontSizes-3xl: 3.125rem;
    --fontSizes-4xl: 5.625rem;
    --fonts-sans: system-ui, -apple-system, 'Helvetica Neue', sans-serif;
    --fonts-mono: 'SFMono-Regular', Consolas, Menlo, monospace;
    --fonts-display: 'Space Grotesk', system-ui, -apple-system, 'Helvetica Neue', sans-serif;
    --fonts-body: 'Inter', system-ui, -apple-system, 'Helvetica Neue', sans-serif;
    --sizes-0: 0.5rem;
    --sizes-1: 1rem;
    --sizes-2: 1.5rem;
    --sizes-3: 2rem;
    --sizes-4: 2.5rem;
    --sizes-5: 3rem;
    --sizes-6: 4rem;
    --sizes-7: 6rem;
    --sizes-8: 8rem;
    --radii-0: 0.25rem;
    --radii-1: 0.5rem;
    --radii-2: 0.75rem;
    --radii-3: 1rem;
    --radii-round: 100rem;
    --shadows-0: 0 1px 3px hsla(0, 0%, 20%, 0.1), 0 1px 2px hsla(0, 0%, 20%, 0.15);
    --shadows-1: 0 3px 6px hsla(0, 0%, 20%, 0.1), 0 3px 6px hsla(0, 0%, 20%, 0.1);
    --shadows-2: 0 10px 20px hsla(0, 0%, 20%, 0.1), 0 6px 6px hsla(0, 0%, 20%, 0.1);
    --shadows-3: 0 14px 28px hsla(0, 0%, 20%, 0.15), 0 10px 10px hsla(0, 0%, 20%, 0.1);
  }

  .accent-purple1 {
    --colors-accent1: #FFFFFF;
    --colors-accent2: var(--colors-purple100);
    --colors-accent3: var(--colors-purple200);
    --colors-accent4: var(--colors-purple300);
    --colors-accent5: var(--colors-purple400);
    --colors-accent6: var(--colors-purple500);
    --colors-accent7: var(--colors-purple600);
    --colors-accent8: var(--colors-purple700);
    --colors-accent9: var(--colors-purple800);
    --colors-accent10: var(--colors-purple900);
    --colors-accent11: var(--colors-purple1000);
  }

  .base-purple2 {
    --colors-foreground: var(--colors-grey1000);
    --colors-foreground7plus: #FFFFFF;
    --colors-base1: var(--colors-purple100);
    --colors-base2: var(--colors-purple200);
    --colors-base3: var(--colors-purple300);
    --colors-base4: var(--colors-purple400);
    --colors-base5: var(--colors-purple500);
    --colors-base6: var(--colors-purple600);
    --colors-base7: var(--colors-purple700);
    --colors-base8: var(--colors-purple800);
    --colors-base9: var(--colors-purple900);
    --colors-base10: var(--colors-purple1000);
    --colors-base11: var(--colors-purple1100);
  }
}

@media  {
  .c-fDzwZw {
    align-items: center;
    -webkit-appearance: none;
    appearance: none;
    background: white;
    border: unset;
    border-radius: var(--radii-0);
    box-sizing: border-box;
    cursor: pointer;
    display: flex;
    justify-content: center;
    padding: unset;
    transition: all 100ms ease-out;
  }

  .c-dbrbZt {
    display: inline-block;
    fill: none;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-dhzjXW {
    display: flex;
  }

  .c-fkUJsw {
    align-items: center;
    background: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    padding: unset;
    text-decoration: none;
    transition: all 100ms ease-out;
    white-space: nowrap;
    width: max-content;
  }

  .c-llBIre {
    display: flex;
    flex-direction: column;
    padding: 0 !important;
    font-weight: 400;
    color: var(--colors-grey800) !important;
    background: var(--colors-base1) !important;
  }

  .c-llBIre:hover {
    background: var(--colors-base2) !important;
    color: var(--colors-grey900) !important;
  }

  .c-llBIre:focus {
    background: var(--colors-base1);
    border: 2px solid var(--colors-blue800);
    box-shadow: inset 0 0 0 2px var(--shadows-white);
  }

  .c-llBIre:disabled {
    opacity: 0.2;
  }

  .c-iKnjyA {
    background: white;
    border-radius: var(--radii-1);
    box-shadow: var(--shadows-2);
    max-width: 90vw;
    padding: var(--sizes-2);
    padding-right: var(--space-6);
    position: relative;
    z-index: 10;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-iKnjyA {
      animation-duration: 75ms;
      animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
      will-change: transform, opacity;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-iKnjyA[data-state="open"][data-side="top"] {
      animation-name: k-ftcNPK;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-iKnjyA[data-state="open"][data-side="right"] {
      animation-name: k-hbaHED;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-iKnjyA[data-state="open"][data-side="bottom"] {
      animation-name: k-daNevH;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-iKnjyA[data-state="open"][data-side="left"] {
      animation-name: k-fvyGIa;
    }
}
}

@media  {
  .c-fDzwZw-PrXKS-size-md {
    height: var(--sizes-4);
    width: var(--sizes-4);
  }

  .c-dbrbZt-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }

  .c-fkUJsw-elrwsr-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
    height: var(--sizes-4);
    padding-left: var(--space-5);
    padding-right: var(--space-5);
  }

  .c-llBIre-igvUvR-size-md {
    width: var(--sizes-4);
  }

  .c-llBIre-hpqEAt-selected-true {
    border: 1px solid var(--colors-accent9);
    font-weight: 600;
  }

  .c-llBIre-hpqEAt-selected-true:hover {
    border-color: var(--colors-accent10);
  }

  .c-iKnjyA-kUaMfZ-size-md {
    max-width: 400px;
  }
}

@media  {
  .c-fDzwZw-otpKd-cv {
    background: transparent;
    color: var(--colors-tonal300);
  }

  .c-fDzwZw-otpKd-cv:not(:disabled):hover,
  .c-fDzwZw-otpKd-cv:not(:disabled):focus {
    color: var(--colors-primaryMid);
  }

  .c-fDzwZw-otpKd-cv:not(:disabled):active {
    color: var(--colors-primaryDark);
  }

  .c-fDzwZw-otpKd-cv[disabled] {
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fkUJsw-gsycxF-cv {
    background: var(--colors-primary);
    color: white;
  }

  .c-fkUJsw-gsycxF-cv[disabled] {
    background: var(--colors-tonal100);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fkUJsw-gsycxF-cv:not([disabled]):hover,
  .c-fkUJsw-gsycxF-cv:not([disabled]):focus {
    background: var(--colors-primaryMid);
    color: white;
  }

  .c-fkUJsw-gsycxF-cv:not([disabled]):active {
    background: var(--colors-primaryDark);
  }
}

@media  {
  .c-PJLV-idhzjXW-css {
    display: flex;
  }

  .c-fDzwZw-iiHIFEs-css:disabled {
    opacity: 0.4;
  }

  .c-dhzjXW-illVfQI-css {
    gap: var(--space-1);
  }

  .c-iKnjyA-ihiLPRQ-css {
    padding: var(--space-4);
    display: flex;
    flex-wrap: wrap;
    gap: var(--space-1);
  }
}

<div>
  <div
    class="PJLV accent-purple1 base-purple2"
  >
    <div
      class="c-PJLV c-PJLV-idhzjXW-css"
    >
      <button
        aria-label="Previous page"
        class="c-fDzwZw c-fDzwZw-PrXKS-size-md c-fDzwZw-otpKd-cv c-fDzwZw-iiHIFEs-css"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          class="c-dbrbZt c-dbrbZt-dMrjnF-size-md c-dbrbZt-iPJLV-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="14 18 8 12 14 6 14 6"
          />
        </svg>
      </button>
      <div
        class="c-dhzjXW c-dhzjXW-illVfQI-css"
      >
        <button
          aria-current="page"
          aria-disabled="false"
          class="c-fkUJsw c-fkUJsw-elrwsr-size-md c-fkUJsw-gsycxF-cv c-llBIre c-llBIre-igvUvR-size-md c-llBIre-hpqEAt-selected-true"
          type="button"
        >
          1
        </button>
        <button
          aria-disabled="false"
          class="c-fkUJsw c-fkUJsw-elrwsr-size-md c-fkUJsw-gsycxF-cv c-llBIre c-llBIre-igvUvR-size-md"
          type="button"
        >
          2
        </button>
        <button
          aria-disabled="false"
          class="c-fkUJsw c-fkUJsw-elrwsr-size-md c-fkUJsw-gsycxF-cv c-llBIre c-llBIre-igvUvR-size-md"
          type="button"
        >
          3
        </button>
        <button
          aria-disabled="false"
          class="c-fkUJsw c-fkUJsw-elrwsr-size-md c-fkUJsw-gsycxF-cv c-llBIre c-llBIre-igvUvR-size-md"
          type="button"
        >
          4
        </button>
        <button
          aria-controls="radix-0"
          aria-expanded="false"
          aria-haspopup="dialog"
          class="c-fDzwZw c-fDzwZw-PrXKS-size-md c-fDzwZw-otpKd-cv"
          data-state="closed"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="c-dbrbZt c-dbrbZt-dMrjnF-size-md c-dbrbZt-iPJLV-css"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="1"
            />
            <circle
              cx="6"
              cy="12"
              r="1"
            />
            <circle
              cx="18"
              cy="12"
              r="1"
            />
          </svg>
        </button>
        <button
          class="c-fkUJsw c-fkUJsw-elrwsr-size-md c-fkUJsw-gsycxF-cv c-llBIre c-llBIre-igvUvR-size-md"
          type="button"
        >
          6
        </button>
      </div>
      <button
        aria-label="Next page"
        class="c-fDzwZw c-fDzwZw-PrXKS-size-md c-fDzwZw-otpKd-cv c-fDzwZw-iiHIFEs-css"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="c-dbrbZt c-dbrbZt-dMrjnF-size-md c-dbrbZt-iPJLV-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="10 6 16 12 10 18 10 18"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Pagination component renders the mock test variant 1`] = `
@media  {
  :root,
  .t-cyussq {
    --default-colors: [object Object];
    --default-space: [object Object];
    --default-fontSizes: [object Object];
    --default-fonts: [object Object];
    --default-sizes: [object Object];
    --default-radii: [object Object];
    --default-shadows: [object Object];
    --colors-textForeground: hsl(0, 0%, 12%);
    --colors-textSubtle: hsl(0, 0%, 33%);
    --colors-textPlaceholder: hsl(0, 0%, 46%);
    --colors-background: hsl(0, 0%, 96%);
    --colors-backgroundAccent: hsl(215, 100%, 98%);
    --colors-grey100: hsl(0, 0%, 96%);
    --colors-grey200: hsl(0, 0%, 92%);
    --colors-grey300: hsl(0, 0%, 88%);
    --colors-grey400: hsl(0, 0%, 81%);
    --colors-grey500: hsl(0, 0%, 76%);
    --colors-grey600: hsl(0, 0%, 71%);
    --colors-grey700: hsl(0, 0%, 46%);
    --colors-grey800: hsl(0, 0%, 33%);
    --colors-grey900: hsl(0, 0%, 20%);
    --colors-grey1000: hsl(0, 0%, 12%);
    --colors-grey1100: hsl(0, 0%, 10%);
    --colors-grey1200: hsl(0, 0%, 6%);
    --colors-blue100: hsl(215, 100%, 98%);
    --colors-blue200: hsl(212, 100%, 95%);
    --colors-blue300: hsl(211, 100%, 92%);
    --colors-blue400: hsl(212, 100%, 88%);
    --colors-blue500: hsl(212, 87%, 84%);
    --colors-blue600: hsl(216, 96%, 79%);
    --colors-blue700: hsl(214, 92%, 63%);
    --colors-blue800: hsl(217, 92%, 51%);
    --colors-blue900: hsl(223, 78%, 44%);
    --colors-blue1000: hsl(228, 82%, 35%);
    --colors-blue1100: hsl(228, 63%, 23%);
    --colors-blue1200: hsl(228, 63%, 20%);
    --colors-purple100: hsl(281, 100%, 98%);
    --colors-purple200: hsl(270, 100%, 95%);
    --colors-purple300: hsl(270, 100%, 92%);
    --colors-purple400: hsl(270, 100%, 89%);
    --colors-purple500: hsl(270, 87%, 84%);
    --colors-purple600: hsl(264, 96%, 79%);
    --colors-purple700: hsl(275, 100%, 51%);
    --colors-purple800: hsl(273, 94%, 48%);
    --colors-purple900: hsl(268, 78%, 42%);
    --colors-purple1000: hsl(266, 82%, 32%);
    --colors-purple1100: hsl(265, 63%, 23%);
    --colors-purple1200: hsl(265, 63%, 20%);
    --colors-tonal50: hsl(0, 0%, 96%);
    --colors-tonal100: hsl(0, 0%, 92%);
    --colors-tonal200: hsl(0, 0%, 71%);
    --colors-tonal300: hsl(0, 0%, 46%);
    --colors-tonal400: hsl(0, 0%, 33%);
    --colors-tonal500: hsl(0, 0%, 20%);
    --colors-tonal600: hsl(0, 0%, 12%);
    --colors-alpha100: hsla(0, 0%, 20%, 0.1);
    --colors-alpha150: hsla(0, 0%, 20%, 0.15);
    --colors-alpha200: hsla(0, 0%, 20%, 0.2);
    --colors-alpha250: hsla(0, 0%, 20%, 0.25);
    --colors-alpha600: hsla(0, 0%, 20%, 0.6);
    --colors-primaryLight: hsl(215, 100%, 98%);
    --colors-primary: hsl(217, 92%, 51%);
    --colors-primaryMid: hsl(223, 78%, 44%);
    --colors-primaryDark: hsl(228, 82%, 35%);
    --colors-secondary: hsl(204, 100%, 72%);
    --colors-brandRed: hsl(0, 91%, 64%);
    --colors-brandRedAccent: hsl(14, 100%, 71%);
    --colors-brandGreen: hsl(128, 47%, 53%);
    --colors-brandGreenAccent: hsl(168, 100%, 20%);
    --colors-brandPurple: hsl(256, 65%, 62%);
    --colors-brandPurpleAccent: hsl(256, 93%, 35%);
    --colors-brandYellow: hsl(41, 100%, 55%);
    --colors-brandYellowAccent: hsl(33, 100%, 50%);
    --colors-successLight: hsl(119, 44%, 94%);
    --colors-success: hsl(119, 100%, 27%);
    --colors-successMid: hsl(124, 100%, 22%);
    --colors-successDark: hsl(126, 100%, 17%);
    --colors-dangerLight: hsl(0, 77%, 95%);
    --colors-danger: hsl(0, 96%, 48%);
    --colors-dangerMid: hsl(0, 96%, 41%);
    --colors-dangerDark: hsl(0, 97%, 34%);
    --colors-warningLight: hsl(39, 100%, 94%);
    --colors-warning: hsl(41, 100%, 55%);
    --colors-warningMid: hsl(41, 89%, 48%);
    --colors-warningDark: hsl(41, 100%, 41%);
    --colors-warningText: hsl(24, 100%, 37%);
    --colors-subjectEnglish: hsl(0, 91%, 64%);
    --colors-subjectMaths: hsl(217, 92%, 51%);
    --colors-subjectScience: hsl(256, 65%, 62%);
    --colors-subjectVerbalReasoning: hsl(128, 47%, 53%);
    --colors-subjectNonVerbalReasoning: hsl(41, 100%, 55%);
    --colors-subjectCreativeWriting: hsl(33, 100%, 50%);
    --colors-subjectExamSkills: hsl(256, 93%, 35%);
    --space-0: 0.125rem;
    --space-1: 0.25rem;
    --space-2: 0.5rem;
    --space-3: 0.75rem;
    --space-4: 1rem;
    --space-5: 2rem;
    --space-6: 2.5rem;
    --space-7: 3rem;
    --space-8: 4rem;
    --space-9: 5rem;
    --space-24: 1.5rem;
    --fontSizes-xs: 0.75rem;
    --fontSizes-sm: 0.875rem;
    --fontSizes-md: 1rem;
    --fontSizes-lg: 1.3125rem;
    --fontSizes-xl: 1.75rem;
    --fontSizes-2xl: 2.3125rem;
    --fontSizes-3xl: 3.125rem;
    --fontSizes-4xl: 5.625rem;
    --fonts-sans: system-ui, -apple-system, 'Helvetica Neue', sans-serif;
    --fonts-mono: 'SFMono-Regular', Consolas, Menlo, monospace;
    --fonts-display: 'Space Grotesk', system-ui, -apple-system, 'Helvetica Neue', sans-serif;
    --fonts-body: 'Inter', system-ui, -apple-system, 'Helvetica Neue', sans-serif;
    --sizes-0: 0.5rem;
    --sizes-1: 1rem;
    --sizes-2: 1.5rem;
    --sizes-3: 2rem;
    --sizes-4: 2.5rem;
    --sizes-5: 3rem;
    --sizes-6: 4rem;
    --sizes-7: 6rem;
    --sizes-8: 8rem;
    --radii-0: 0.25rem;
    --radii-1: 0.5rem;
    --radii-2: 0.75rem;
    --radii-3: 1rem;
    --radii-round: 100rem;
    --shadows-0: 0 1px 3px hsla(0, 0%, 20%, 0.1), 0 1px 2px hsla(0, 0%, 20%, 0.15);
    --shadows-1: 0 3px 6px hsla(0, 0%, 20%, 0.1), 0 3px 6px hsla(0, 0%, 20%, 0.1);
    --shadows-2: 0 10px 20px hsla(0, 0%, 20%, 0.1), 0 6px 6px hsla(0, 0%, 20%, 0.1);
    --shadows-3: 0 14px 28px hsla(0, 0%, 20%, 0.15), 0 10px 10px hsla(0, 0%, 20%, 0.1);
  }

  .accent-purple1 {
    --colors-accent1: #FFFFFF;
    --colors-accent2: var(--colors-purple100);
    --colors-accent3: var(--colors-purple200);
    --colors-accent4: var(--colors-purple300);
    --colors-accent5: var(--colors-purple400);
    --colors-accent6: var(--colors-purple500);
    --colors-accent7: var(--colors-purple600);
    --colors-accent8: var(--colors-purple700);
    --colors-accent9: var(--colors-purple800);
    --colors-accent10: var(--colors-purple900);
    --colors-accent11: var(--colors-purple1000);
  }

  .base-purple2 {
    --colors-foreground: var(--colors-grey1000);
    --colors-foreground7plus: #FFFFFF;
    --colors-base1: var(--colors-purple100);
    --colors-base2: var(--colors-purple200);
    --colors-base3: var(--colors-purple300);
    --colors-base4: var(--colors-purple400);
    --colors-base5: var(--colors-purple500);
    --colors-base6: var(--colors-purple600);
    --colors-base7: var(--colors-purple700);
    --colors-base8: var(--colors-purple800);
    --colors-base9: var(--colors-purple900);
    --colors-base10: var(--colors-purple1000);
    --colors-base11: var(--colors-purple1100);
  }
}

@media  {
  .c-fDzwZw {
    align-items: center;
    -webkit-appearance: none;
    appearance: none;
    background: white;
    border: unset;
    border-radius: var(--radii-0);
    box-sizing: border-box;
    cursor: pointer;
    display: flex;
    justify-content: center;
    padding: unset;
    transition: all 100ms ease-out;
  }

  .c-dbrbZt {
    display: inline-block;
    fill: none;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-dhzjXW {
    display: flex;
  }

  .c-fkUJsw {
    align-items: center;
    background: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    padding: unset;
    text-decoration: none;
    transition: all 100ms ease-out;
    white-space: nowrap;
    width: max-content;
  }

  .c-llBIre {
    display: flex;
    flex-direction: column;
    padding: 0 !important;
    font-weight: 400;
    color: var(--colors-grey800) !important;
    background: var(--colors-base1) !important;
  }

  .c-llBIre:hover {
    background: var(--colors-base2) !important;
    color: var(--colors-grey900) !important;
  }

  .c-llBIre:focus {
    background: var(--colors-base1);
    border: 2px solid var(--colors-blue800);
    box-shadow: inset 0 0 0 2px var(--shadows-white);
  }

  .c-llBIre:disabled {
    opacity: 0.2;
  }

  .c-iKnjyA {
    background: white;
    border-radius: var(--radii-1);
    box-shadow: var(--shadows-2);
    max-width: 90vw;
    padding: var(--sizes-2);
    padding-right: var(--space-6);
    position: relative;
    z-index: 10;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-iKnjyA {
      animation-duration: 75ms;
      animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
      will-change: transform, opacity;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-iKnjyA[data-state="open"][data-side="top"] {
      animation-name: k-ftcNPK;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-iKnjyA[data-state="open"][data-side="right"] {
      animation-name: k-hbaHED;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-iKnjyA[data-state="open"][data-side="bottom"] {
      animation-name: k-daNevH;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-iKnjyA[data-state="open"][data-side="left"] {
      animation-name: k-fvyGIa;
    }
}

  .c-kYReMo {
    border-radius: var(--radii-round);
    height: 4px;
    width: 4px;
    background: var(--colors-accent9);
  }

  .c-kYReMo:hover {
    background: var(--colors-accent10);
  }

  .c-kYReMo:focus {
    background: var(--colors-accent9);
  }
}

@media  {
  .c-fDzwZw-PrXKS-size-md {
    height: var(--sizes-4);
    width: var(--sizes-4);
  }

  .c-dbrbZt-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }

  .c-fkUJsw-elrwsr-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
    height: var(--sizes-4);
    padding-left: var(--space-5);
    padding-right: var(--space-5);
  }

  .c-llBIre-igvUvR-size-md {
    width: var(--sizes-4);
  }

  .c-llBIre-hpqEAt-selected-true {
    border: 1px solid var(--colors-accent9);
    font-weight: 600;
  }

  .c-llBIre-hpqEAt-selected-true:hover {
    border-color: var(--colors-accent10);
  }

  .c-iKnjyA-kUaMfZ-size-md {
    max-width: 400px;
  }

  .c-llBIre-dyAWok-isCompleted-true {
    font-weight: 600;
    color: var(--colors-accent9) !important;
  }

  .c-llBIre-dyAWok-isCompleted-true:hover {
    color: var(--colors-accent10) !important;
  }
}

@media  {
  .c-fDzwZw-otpKd-cv {
    background: transparent;
    color: var(--colors-tonal300);
  }

  .c-fDzwZw-otpKd-cv:not(:disabled):hover,
  .c-fDzwZw-otpKd-cv:not(:disabled):focus {
    color: var(--colors-primaryMid);
  }

  .c-fDzwZw-otpKd-cv:not(:disabled):active {
    color: var(--colors-primaryDark);
  }

  .c-fDzwZw-otpKd-cv[disabled] {
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fkUJsw-gsycxF-cv {
    background: var(--colors-primary);
    color: white;
  }

  .c-fkUJsw-gsycxF-cv[disabled] {
    background: var(--colors-tonal100);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fkUJsw-gsycxF-cv:not([disabled]):hover,
  .c-fkUJsw-gsycxF-cv:not([disabled]):focus {
    background: var(--colors-primaryMid);
    color: white;
  }

  .c-fkUJsw-gsycxF-cv:not([disabled]):active {
    background: var(--colors-primaryDark);
  }
}

@media  {
  .c-PJLV-idhzjXW-css {
    display: flex;
  }

  .c-fDzwZw-iiHIFEs-css:disabled {
    opacity: 0.4;
  }

  .c-dhzjXW-illVfQI-css {
    gap: var(--space-1);
  }

  .c-iKnjyA-ihiLPRQ-css {
    padding: var(--space-4);
    display: flex;
    flex-wrap: wrap;
    gap: var(--space-1);
  }
}

<div>
  <div
    class="PJLV accent-purple1 base-purple2"
  >
    <div
      class="c-PJLV c-PJLV-idhzjXW-css"
    >
      <button
        aria-label="Previous page"
        class="c-fDzwZw c-fDzwZw-PrXKS-size-md c-fDzwZw-otpKd-cv c-fDzwZw-iiHIFEs-css"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          class="c-dbrbZt c-dbrbZt-dMrjnF-size-md c-dbrbZt-iPJLV-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="14 18 8 12 14 6 14 6"
          />
        </svg>
      </button>
      <div
        class="c-dhzjXW c-dhzjXW-illVfQI-css"
      >
        <button
          aria-current="page"
          class="c-fkUJsw c-fkUJsw-elrwsr-size-md c-fkUJsw-gsycxF-cv c-llBIre c-llBIre-igvUvR-size-md c-llBIre-hpqEAt-selected-true"
          type="button"
        >
          1
        </button>
        <button
          class="c-fkUJsw c-fkUJsw-elrwsr-size-md c-fkUJsw-gsycxF-cv c-llBIre c-llBIre-igvUvR-size-md"
          type="button"
        >
          2
        </button>
        <button
          class="c-fkUJsw c-fkUJsw-elrwsr-size-md c-fkUJsw-gsycxF-cv c-llBIre c-llBIre-igvUvR-size-md"
          type="button"
        >
          3
        </button>
        <button
          class="c-fkUJsw c-fkUJsw-elrwsr-size-md c-fkUJsw-gsycxF-cv c-llBIre c-llBIre-igvUvR-size-md"
          type="button"
        >
          4
        </button>
        <button
          aria-controls="radix-1"
          aria-expanded="false"
          aria-haspopup="dialog"
          class="c-fDzwZw c-fDzwZw-PrXKS-size-md c-fDzwZw-otpKd-cv"
          data-state="closed"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="c-dbrbZt c-dbrbZt-dMrjnF-size-md c-dbrbZt-iPJLV-css"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="1"
            />
            <circle
              cx="6"
              cy="12"
              r="1"
            />
            <circle
              cx="18"
              cy="12"
              r="1"
            />
          </svg>
        </button>
        <button
          aria-disabled="true"
          class="c-fkUJsw c-fkUJsw-elrwsr-size-md c-fkUJsw-gsycxF-cv c-llBIre c-llBIre-igvUvR-size-md c-llBIre-dyAWok-isCompleted-true"
          disabled=""
          type="button"
        >
          7
          <div
            class="c-PJLV c-kYReMo"
          />
        </button>
      </div>
      <button
        aria-label="Next page"
        class="c-fDzwZw c-fDzwZw-PrXKS-size-md c-fDzwZw-otpKd-cv c-fDzwZw-iiHIFEs-css"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="c-dbrbZt c-dbrbZt-dMrjnF-size-md c-dbrbZt-iPJLV-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="10 6 16 12 10 18 10 18"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
